querying word2vec model working prototype